:construction: fixing css and flexbox inability to display scrollbars and being 100% height

--- a/src/ProjectAlice.css
+++ b/src/ProjectAlice.css
@@ -127,9 +127,6 @@ html, body {
 	background-color: var(--accent);
 	color: var(--text);
 	font-family: var(--normal);
-	height: 100%;
-	max-height: 100%;
-	min-height: 100%;
 	margin: 0;
 	overflow: hidden;
 	-webkit-touch-callout: none;
@@ -139,51 +136,43 @@ html, body {
 	-ms-user-select: none;
 	-webkit-user-select: none;
 	user-select: none;
-	width: 100%;
+	display: flex;
+	flex: 1;
 }
 
 .mainContainer {
 	display: flex;
-	flex-direction: column;
+	flex-flow: column;
 	flex: 1;
-	height: 100%;
-	max-height: 100%;
-	min-height: 100%;
-	width: 100%;
-	max-width: 100%;
+	align-items: stretch;
+	overflow: hidden;
 }
 
 header {
 	display: flex;
 	align-items: center;
 	background-color: var(--mainBG);
-	flex-grow: 0;
-	flex-shrink: 0;
 	height: 3em;
 	margin-bottom: 2px;
 	width: 100%;
+	overflow: hidden;
 }
 
 #main {
-	background-color: var(--accent);
 	display: flex;
+	flex-flow: row;
 	flex: 1;
-	flex-direction: row;
-	height: 100%;
-	max-height: 100%;
-	min-height: 100%;
+	position: relative;
+	overflow: hidden;
 }
 
 nav {
 	background-color: var(--mainBG);
 	display: flex;
-	flex-grow: 0;
-	flex-shrink: 0;
 	margin-right: 2px;
 	padding: 0;
 	width: 10em;
 	flex-direction: column;
-	z-index: 0;
 }
 
 #mainSection {
@@ -191,9 +180,6 @@ nav {
 	display: flex;
 	flex: 1;
 	width: 100%;
-	height: 100%;
-	min-height: 100%;
-	max-height: 100%;
 	overflow: hidden;
 	position: relative;
 }
@@ -203,20 +189,22 @@ nav {
 	flex: 1;
 	flex-direction: column;
 	width: 100%;
-	height: 100%;
 	overflow-x: hidden;
 	overflow-y: auto;
-	position: relative;
 }
 
 .tileContainer {
 	display: flex;
+	flex: 1;
 	flex-wrap: wrap;
 	align-content: flex-start;
 	flex-direction: row;
 	overflow-y: auto;
-	height: 100%;
-	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 2px;
 }
 
 .clickable {
